; ModuleID = '/home/carl/AnghaBench/mpv/audio/extr_chmap.c_mp_chmap_reorder_norm.c'
source_filename = "/home/carl/AnghaBench/mpv/audio/extr_chmap.c_mp_chmap_reorder_norm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mp_chmap = type { i32, i32* }

@comp_uint8 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mp_chmap_reorder_norm(%struct.mp_chmap* %0) #0 {
  %2 = alloca %struct.mp_chmap*, align 8
  %3 = alloca i32*, align 8
  store %struct.mp_chmap* %0, %struct.mp_chmap** %2, align 8
  %4 = load %struct.mp_chmap*, %struct.mp_chmap** %2, align 8
  %5 = getelementptr inbounds %struct.mp_chmap, %struct.mp_chmap* %4, i32 0, i32 1
  %6 = load i32*, i32** %5, align 8
  %7 = getelementptr inbounds i32, i32* %6, i64 0
  store i32* %7, i32** %3, align 8
  %8 = load i32*, i32** %3, align 8
  %9 = load %struct.mp_chmap*, %struct.mp_chmap** %2, align 8
  %10 = getelementptr inbounds %struct.mp_chmap, %struct.mp_chmap* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 8
  %12 = load i32, i32* @comp_uint8, align 4
  %13 = call i32 @qsort(i32* %8, i32 %11, i32 1, i32 %12)
  ret void
}

declare dso_local i32 @qsort(i32*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
